# epitools

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  LICENCE.md  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: deploy.yml  pre-commit_checks.yml  test.yml  test_and_deploy.yml
.napari-hub/: config.yml
conda.recipe/: meta.yaml
configs/: cell_config.json
docs/: conf.py  index.rst
docs/api/: cell_statistics.rst  index.rst  projection.rst  segmentation.rst
docs/napari_plugin/: index.rst
examples/: load_sample_data.py
sample_data/4d/: 181210_DM_CellMOr_subsub_reg_decon-1_cropped.tif
sample_data/8bitDataset/: test_image-projected-segmented-seeds.npy  test_image-projected-segmented-stats.csv  test_image-projected-segmented.tif  test_image-projected.tif
sample_data/8bitDataset/Benchmark/: ProjIm.mat  RegIm.mat  RegIm_wClahe.mat  SegResults.mat  Surfaces.mat  TrackingStart.mat
src/epitools/: __init__.py  _reader.py  _regionprops.py  _sample_data.py  _writer.py  main.py  napari.yaml
src/epitools/_datasets/8bitDataset/: test_image.tif
src/epitools/analysis/: __init__.py  cell_statistics.py  projection.py  segmentation.py
src/epitools/widgets/: __init__.py  cell_statistics.py  dialogue.py  projection.py  projection_2ch.py  quality_metrics.py  segmentation.py
src/napari_epitools/: __init__.py  _reader.py  _sample_data.py  _widget.py  _widgets.py  _writer.py  main.py  napari.yaml  projection.py
src/napari_epitools/_tests/: test_projection.py  test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_epitools/analysis/: __init__.py  _skeletonize.py  cell_statistics.py  projection.py  regionprops.py  segmentation.py
src/napari_epitools/projection/: __init__.py  _gridfit.py  projection.py
src/napari_epitools/segmentation/: _skeletonize.py
src/napari_epitools/widgets/: __init__.py  cell_statistics.py  projection.py  segmentation.py
tests/: conftest.py  test__writer.py  test_cell_statistics.py  test_dialogue.py  test_packaging.py  test_projection.py  test_segmentation.py
