[metadata]
name = napari_epitools
version = 0.0.1
description = EpiTools Plugin
long_description = file: README.md
long_description_content_type = text/markdown
author = Napari Developer
author_email = yourname@example.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    napari-assistant
    napari-skimage-regionprops
    napari-time-slicer>=0.4.8
    napari-tools-menu
    numpy
    qtpy
    scikit-image
python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-epitools = napari_epitools:napari.yaml

[options.extras_require]
dev =
    black
    flake8
    isort
    napari
    pre-commit
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
